<resources>
    <string name="app_name">Firetime</string>
    <string name="activities_tab_title">Activities</string>
    <string name="daily_tab_title">Daily</string>
    <string name="weekly_tab_title">Weekly</string>
    <string name="monthly_tab_title">Monthly</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_add_activity">Add Activity</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_time">Add Time</string>
    <string name="action_add_category">Add Category</string>
    <string name="action_help">Help</string>
    <string name="navigation_drawer_activities">Activities</string>
    <string name="navigation_drawer_categories">Categories</string>
    <string name="navigation_drawer_about">About</string>
    <string name="edit_category">Edit Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="edit_history">Edit History</string>
    <string name="delete_history">Delete History</string>
    <string name="save_category">Save Category</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="view_history">View History</string>
    <string name="order_activities">Order Activities</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="add_time">Add Time</string>
    <string name="dialog_yes_no_title">Confirm</string>
    <string name="dialog_yes_no_message">Are you sure you wish to delete this item?</string>
    <string name="cannot_delete_category">Cannot delete a category that contains activities.  Delete all the activities first.</string>
    <string name="amount">Amount:</string>
    <string name="activity_time">Activity Time</string>
    <string name="save_time">Save Time</string>
    <string name="activity">Activity:</string>
    <string name="start_date">Start Date:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_date">End Date:</string>
    <string name="end_time">End Time:</string>
    <string name="note">Note:</string>
    <string name="date_picker_title">Date of Activity:</string>
    <string name="time_picker_title">Time of Activity (24 hour):</string>
    <string name="category_name_required">"Name is required in order to save the category."</string>
    <string name="activity_name_required">"Name is required in order to save the activity."</string>
    <string name="start_before_end">The Start DateTime must be before End DateTime</string>
    <string name="help">Help</string>
    <string name="version">Version 1.0.0.0</string>
    <string name="author">Shawn Salm</string>
    <string name="feedback">Send feedback: shawnsalm2@gmail.com</string>
    <string name="quote">\&quot;...time is the fire in which we burn.\&quot;</string>
    <string name="startrek">Star Trek Generations (Paramount Pictures, 1994)</string>
    <string name="about_text">Firetime helps you to track how you spend your time doing  different activities and review the data on a daily, weekly, and monthly basis.</string>
    <string name="about_help_activities">Activities</string>
    <string name="about_help_activity_time">Activity Time</string>
    <string name="about_help_categories">Categories</string>
    <string name="about_help_activities_text">Activities are any action, event, or task that you wish to track the amount of time you spend doing on a daily, weekly, or monthly basis.  You may add, edit, delete, or reorder an activity.  To add an activity tap the add button at the bottom right corner of the activities view.  To edit or delete an activity tap on an activity\'s menu.  You can also reorder the activities within a category tapping on the category\'s menu.</string>
    <string name="about_help_activity_time_text">When you start an activity you create a history record.  The primary way to create activity history records is by pushing the timer button to start and stop the activity on the activities view.   You can also manually add, edit, and delete a history record.</string>
    <string name="about_help_categories_text">Categories are currently simply a way of organizing activities on the activities view.  You can add, edit,  delete, and reorder categories by tapping on the categories menu item. Note that you can only delete a category if it does not contain any activities.</string>
    <string name="save_activity">Save Activity</string>
    <string name="category">Category:</string>
</resources>
