<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="17dip"
            android:layout_margin="4dp"
            android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="@color/black"
        android:textSize="17dip"
        android:layout_margin="4dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="@color/black"
        android:textSize="17dip"
        android:layout_margin="4dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textColor="@color/black"
        android:textSize="17dip"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quote"
        android:textColor="@color/black"
        android:textSize="17dip"
        android:layout_marginTop="40dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="4dp"
        android:textStyle="italic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startrek"
        android:textColor="@color/black"
        android:textSize="17dip"
        android:layout_marginTop="0dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        android:textColor="@color/black"
        android:textSize="17dip"
        android:layout_margin="4dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>