<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_help_activities"
                android:textColor="@color/black"
                android:textSize="24dip"
                android:layout_margin="4dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_help_activities_text"
                android:textColor="@color/black"
                android:textSize="17dip"
                android:layout_margin="4dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_help_activity_time"
                android:textColor="@color/black"
                android:textSize="24dip"
                android:layout_margin="4dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_help_activity_time_text"
                android:textColor="@color/black"
                android:textSize="17dip"
                android:layout_margin="4dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_help_categories"
                android:textColor="@color/black"
                android:textSize="24dip"
                android:layout_margin="4dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_help_categories_text"
                android:textColor="@color/black"
                android:textSize="17dip"
                android:layout_margin="4dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>