<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@id/main_content"
    tools:context="edu.wit.mobileapp.firetime.controllers.activities.SaveHistoryActivity">

    <GridLayout
        android:layout_margin="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity"
            style="?attr/textAppearanceSearchResultTitle"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnSpan="2"/>
        <Spinner
            android:id="@+id/activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnSpan="2"
             />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            style="?attr/textAppearanceSearchResultTitle"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_margin="5dp"
            />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            style="?attr/textAppearanceSearchResultTitle"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_margin="5dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startDate"
            android:textColor="@color/white"
            android:layout_column="0"
            android:layout_row="3"
            android:backgroundTint="@color/colorPrimaryDark"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startTime"
            android:textColor="@color/white"
            android:layout_column="1"
            android:layout_row="3"
            android:backgroundTint="@color/colorPrimaryDark"
            />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            style="?attr/textAppearanceSearchResultTitle"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_margin="5dp"
            android:id="@+id/endDateText"
            />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            style="?attr/textAppearanceSearchResultTitle"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_margin="5dp"
            android:id="@+id/endTimeText"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endDate"
            android:textColor="@color/white"
            android:layout_column="0"
            android:layout_row="5"
            android:backgroundTint="@color/colorPrimaryDark"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endTime"
            android:textColor="@color/white"
            android:layout_column="1"
            android:layout_row="5"
            android:backgroundTint="@color/colorPrimaryDark"
            />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/textAppearanceSearchResultTitle"
            android:text="@string/note"
            android:layout_column="0"
            android:layout_row="6"
            android:layout_columnSpan="2"
            android:layout_margin="5dp"/>
        <EditText
            android:id="@+id/note"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|left"
            android:maxLines="10"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:layout_column="0"
            android:layout_row="7"
            android:layout_columnSpan="2"
            />
    </GridLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save"
        app:layout_constraintRight_toRightOf="parent"   />


</android.support.constraint.ConstraintLayout>
